<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings1" android:title="@string/action_settings1"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings2" android:title="@string/action_settings2"
        android:orderInCategory="100" app:showAsAction="never" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_red"
            android:title="@string/red_String"
            android:orderInCategory="1"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_green"
            android:title="@string/green_string"
            android:orderInCategory="2"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_yellow"
            android:title="@string/yellow_string"
            android:orderInCategory="3"
            app:showAsAction="never" />
    </group>
</menu>
